<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#15202B"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/teach_your_child"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/openNumbersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/numbers"
            style="@style/CategoryStyle"
            android:background="@color/category_numbers"
            android:text="@string/category_numbers"
            android:textColor="#455A64" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/openFamilyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/family"
            style="@style/CategoryStyle"
            android:background="@color/category_family"
            android:text="@string/category_family"
            android:textColor="#263238" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/openColorsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/colors"
            style="@style/CategoryStyle"
            android:background="@color/category_colors"
            android:text="@string/category_colors"
            android:textColor="#90A4AE" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/openPhrasesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/phrases"
            style="@style/CategoryStyle"
            android:background="@color/category_phrases"
            android:text="@string/category_phrases"
            android:textColor="#263238" />
    </androidx.cardview.widget.CardView>

</LinearLayout>